[package]
name = "blog-cms"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "blog-cms"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["mysql", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.uuid]
version = "1.10.0"
features = ["serde"]

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
